--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "fastify": "^4.14.1"
+    "fastify": "^4.14.1",
+    "urllib": "^3.11.0"
   }
 }
