--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "cheerio": "1.0.0-rc.12",
+    "dayjs": "^1.11.7",
     "fastify": "^4.14.1",
-    "urllib": "^3.11.0"
+    "urllib": "^3.11.0",
+    "zod": "^3.21.4"
   }
 }
