--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cheerio": "1.0.0-rc.12",
     "dayjs": "^1.11.7",
     "fastify": "^4.14.1",
+    "node-cache": "^5.1.2",
     "urllib": "^3.11.0",
     "zod": "^3.21.4"
   }
