--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
@@ -17,7 +18,9 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "fastify": "^4.14.1",
+    "jsonwebtoken": "^9.0.0",
     "node-cache": "^5.1.2",
     "urllib": "^3.11.0",
     "zod": "^3.21.4"
