--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.0.5",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
