--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "./src/main.ts",
   "scripts": {
-    "dev": "tsx watch ./src/main.ts"
+    "dev": "tsx watch ./src/main.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.4.4",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
     "jest": "^29.5.0",
