--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "fatequense-api",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "An unofficial Siga api to get student informations easily",
+  "author": "Caio Vinícius <caiocamargo.ct@gmail.com>",
+  "keywords": [],
+  "license": "ISC",
   "main": "./src/main.ts",
   "scripts": {
     "dev": "tsx watch ./src/main.ts",
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.4.4",
