--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@fastify/rate-limit": "^8.0.0",
     "cheerio": "1.0.0-rc.12",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
