--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "@types/jest": "^29.4.4",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "prettier": "^2.8.7",
     "ts-jest": "^29.0.5",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
