--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start": "node ./dist/main.js",
     "format": "prettier --write \"./src/**/*ts\"",
     "lint": "eslint \"./src/**/*.ts\" --fix",
-
     "dev": "tsx watch ./src/main.ts",
-
     "test": "jest",
     "test:watch": "jest --watch"
   },
@@ -42,6 +40,7 @@
     "fastify": "^4.14.1",
     "jsonwebtoken": "^9.0.0",
     "node-cache": "^5.1.2",
+    "rimraf": "^5.0.0",
     "urllib": "^3.11.0",
     "zod": "^3.21.4"
   }
