--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "ISC",
   "main": "./src/main.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "prebuild": "rimraf ./dist",
+    "build": "tsc -p tsconfig.build.json",
     "start": "node ./dist/main.js",
     "format": "prettier --write \"./src/**/*ts\"",
     "lint": "eslint \"./src/**/*.ts\" --fix",
@@ -39,9 +40,13 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.14.1",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.2",
     "node-cache": "^5.1.2",
     "rimraf": "^5.0.0",
     "urllib": "^3.11.0",
     "zod": "^3.21.4"
+  },
+  "_moduleAliases": {
+    "~": "dist"
   }
 }
