--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.0.5",
+    "tsc-alias": "^1.8.6",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
