--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "./src/main.ts",
   "scripts": {
     "prebuild": "rimraf ./dist",
-    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "build": "tsup ./src",
     "start": "node ./dist/main.js",
     "format": "prettier --write \"./src/**/*ts\"",
     "lint": "eslint \"./src/**/*.ts\" --fix",
@@ -29,7 +29,7 @@
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.0.5",
-    "tsc-alias": "^1.8.6",
+    "tsup": "^6.7.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
