--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/jest": "^29.4.4",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
