--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "trailingComma": "all",
   "importOrder": [
     "^(.*)/dayjs.config$",
-    "^<THIRD_PARTY_MODULES>",
+    "<THIRD_PARTY_MODULES>",
     "^(.*)/controllers/(.*)$",
     "^(.*)/routes/(.*)$",
     "^(.*)/hooks/(.*)$",
