--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
+    "prisma": "^4.14.0",
     "ts-jest": "^29.0.5",
     "tsup": "^6.7.0",
     "tsx": "^3.12.3",
