--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "test:watch": "jest --watch"
   },
   "devDependencies": {
-    "@jest/globals": "^29.5.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/jest": "^29.4.4",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
@@ -30,13 +28,12 @@
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "prisma": "^4.14.0",
-    "ts-jest": "^29.0.5",
     "tsup": "^6.7.0",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.32.2"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.1",
