chore: added drizzle orm packages

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "drizzle-kit": "^0.19.3",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -40,8 +41,10 @@
     "cheerio": "1.0.0-rc.12",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.27.0",
     "fastify": "^4.14.1",
     "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.4.3",
     "node-cache": "^5.1.2",
     "rimraf": "^5.0.0",
     "urllib": "^3.11.0",
